--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -164,7 +164,7 @@
             <flag name="start" value="8388611" />
             <flag name="top" value="48" />
         </attr>
-        <attr name="sv_radio_button_id" format="reference|integer" />
+        <attr name="sv_radio_button_id" format="integer|reference" />
         <attr name="sv_show_radio_button" format="boolean|reference" />
         <attr name="sv_has_radio_place_holder" format="boolean|reference" />
     </declare-styleable>
