功能：热点配置流程

--- a/app/src/main/res/layout/activity_ap_setting.xml
+++ b/app/src/main/res/layout/activity_ap_setting.xml
@@ -35,6 +35,7 @@
         android:layout_marginTop="@dimen/y68"
         android:background="#00000000"
         android:hint="输入"
+        android:singleLine="true"
         android:textColorHint="@color/color_666666"
         android:textSize="@dimen/sp15"
         app:layout_constraintEnd_toEndOf="parent"
@@ -100,6 +101,7 @@
             android:maxLines="1"
             android:paddingLeft="@dimen/x40"
             android:paddingRight="@dimen/x40"
+            android:singleLine="true"
             android:text="11111111"
             android:textColor="@color/color_666666"
             android:textColorHint="@color/color_cecece"
