--- a/app/src/main/res/layout/activity_cam_setting.xml
+++ b/app/src/main/res/layout/activity_cam_setting.xml
@@ -47,6 +47,16 @@
                 android:textSize="@dimen/sp15" />
 
             <com.cylan.jiafeigou.widget.SettingItemView0
+                android:id="@+id/sv_setting_device_ap"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                hunt:sv_image_src="@drawable/setting_icon_information"
+                hunt:sv_sub_title="@string/EQUIPMENT_INFO"
+                hunt:sv_title="@string/EQUIPMENT_INFO"
+                hunt:sv_v_divider="true"
+                hunt:sv_v_image_show="true" />
+
+            <com.cylan.jiafeigou.widget.SettingItemView0
                 android:id="@+id/sv_setting_device_detail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
