--- a/app/src/main/res/drawable/umeng_socialize_edit_bg.xml
+++ b/app/src/main/res/drawable/umeng_socialize_edit_bg.xml
@@ -2,7 +2,8 @@
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@android:color/transparent" />
-    <stroke android:width="1dp"
+    <stroke
+        android:width="1dp"
         android:color="#C3C6C9"
 
         />
