--- a/app/src/main/res/layout-sw550dp-large/umeng_socialize_oauth_dialog.xml
+++ b/app/src/main/res/layout-sw550dp-large/umeng_socialize_oauth_dialog.xml
@@ -2,13 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:padding="5dp" >
+    android:padding="5dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:background="#0086DC"
         android:id="@+id/umeng_socialize_titlebar"
         android:layout_height="54dp">
+
         <TextView
             android:layout_width="wrap_content"
             android:id="@+id/umeng_title"
@@ -25,6 +26,7 @@
             android:visibility="visible"
             android:onClick="onCancel"
             android:layout_height="match_parent">
+
             <ImageButton
 
                 android:scaleType="center"
@@ -35,6 +37,7 @@
 
                 android:layout_height="20dp" />
         </RelativeLayout>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -45,8 +48,7 @@
             android:id="@+id/umeng_share_btn"
             android:padding="4dp"
             android:background="@drawable/umeng_socialize_btn_bg"
-            android:textColor="#ffffff"
-            />
+            android:textColor="#ffffff" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -55,7 +57,7 @@
         android:layout_height="38dp"
         android:layout_alignParentBottom="true"
 
-        android:visibility="visible" >
+        android:visibility="visible">
 
         <CheckBox
             android:id="@+id/umeng_socialize_follow_check"
@@ -78,23 +80,23 @@
     </RelativeLayout>
 
     <!--<LinearLayout-->
-        <!--android:id="@+id/webView_container"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:layout_above="@id/umeng_socialize_follow"-->
-        <!--android:layout_below="@id/umeng_socialize_titlebar"-->
-        <!--android:orientation="horizontal"-->
-        <!--android:visibility="visible" />-->
+    <!--android:id="@+id/webView_container"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:layout_above="@id/umeng_socialize_follow"-->
+    <!--android:layout_below="@id/umeng_socialize_titlebar"-->
+    <!--android:orientation="horizontal"-->
+    <!--android:visibility="visible" />-->
 
     <WebView
-    android:id="@+id/webView"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="#F2F5F6"
+        android:id="@+id/webView"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="#F2F5F6"
 
-    android:layout_above="@id/umeng_socialize_follow"
-    android:layout_below="@id/umeng_socialize_titlebar"
-    android:visibility="visible" />
+        android:layout_above="@id/umeng_socialize_follow"
+        android:layout_below="@id/umeng_socialize_titlebar"
+        android:visibility="visible" />
 
     <RelativeLayout
         android:id="@+id/progress_bar_parent"
@@ -102,13 +104,13 @@
         android:layout_height="fill_parent"
         android:layout_above="@id/umeng_socialize_follow"
         android:layout_below="@id/umeng_socialize_titlebar"
-        android:background="#F2F5F6" >
+        android:background="#F2F5F6">
 
         <LinearLayout
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_centerInParent="true"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <ProgressBar
                 android:layout_width="fill_parent"
