--- a/app/src/main/res/layout/activity_ap_setting.xml
+++ b/app/src/main/res/layout/activity_ap_setting.xml
@@ -96,7 +96,7 @@
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:gravity="center"
-            android:hint="请输入密码"
+            android:hint="@string/HOTSPOT_PASSWORD"
             android:inputType="textPassword"
             android:maxLines="1"
             android:paddingLeft="@dimen/x40"
