--- a/app/src/main/res/layout/com_facebook_activity_layout.xml
+++ b/app/src/main/res/layout/com_facebook_activity_layout.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (c) 2014-present, Facebook, Inc. All rights reserved.
 
     You are hereby granted a non-exclusive, worldwide, royalty-free license to use,
@@ -21,8 +20,7 @@
 
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:background="#ffffff"
-             android:id="@+id/com_facebook_fragment_container"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-    />
+    android:background="#ffffff"
+    android:id="@+id/com_facebook_fragment_container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
