--- a/app/src/main/res/layout/com_facebook_login_fragment.xml
+++ b/app/src/main/res/layout/com_facebook_login_fragment.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (c) 2014-present, Facebook, Inc. All rights reserved.
 
     You are hereby granted a non-exclusive, worldwide, royalty-free license to use,
@@ -21,16 +20,16 @@
 
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:background="#ffffff"
-                android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:background="#ffffff"
+    android:layout_height="match_parent">
 
-    <ProgressBar android:indeterminate="true"
-                 android:layout_width="wrap_content"
-                 android:layout_height="50dip"
-                 android:id="@+id/com_facebook_login_activity_progress_bar"
-                 android:layout_centerInParent="true"
-                 android:visibility="gone"
-                 android:indeterminateOnly="true"
-        />
+    <ProgressBar
+        android:indeterminate="true"
+        android:layout_width="wrap_content"
+        android:layout_height="50dip"
+        android:id="@+id/com_facebook_login_activity_progress_bar"
+        android:layout_centerInParent="true"
+        android:visibility="gone"
+        android:indeterminateOnly="true" />
 </RelativeLayout>
