--- a/app/src/main/res/layout/fragment_youtube_detail.xml
+++ b/app/src/main/res/layout/fragment_youtube_detail.xml
@@ -4,6 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_f4f4f4"
+    android:clickable="true"
+    android:focusable="true"
     android:orientation="vertical">
 
     <com.cylan.jiafeigou.widget.CustomToolbar
@@ -29,13 +31,13 @@
         android:src="@drawable/pic_youtube" />
 
     <TextView
+        android:id="@+id/youtube_detail_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/y23"
         android:ellipsize="end"
         android:maxLines="1"
         android:paddingEnd="@dimen/y15"
-
         android:paddingStart="@dimen/y15"
         android:singleLine="true"
         android:text="我正在用UniCam720°全景相机进行全景"
@@ -43,6 +45,7 @@
         android:textSize="@dimen/sp17" />
 
     <TextView
+        android:id="@+id/youtube_detail_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/y8"
@@ -55,19 +58,21 @@
         android:textSize="@dimen/sp14" />
 
     <com.cylan.jiafeigou.widget.SettingItemView0
+        android:id="@+id/youtube_detail_start_time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/y48"
         android:background="@color/color_white"
         app:sv_sub_title="Jane"
-        app:sv_title="@string/LIVE_PLATFORM_YOUTUBE"
+        app:sv_title="@string/Tap1_CameraFun_Timelapse_StartTime"
         app:sv_v_divider="true" />
 
     <com.cylan.jiafeigou.widget.SettingItemView0
+        android:id="@+id/youtube_detail_end_time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/color_white"
         app:sv_sub_title="Jane"
-        app:sv_title="@string/LIVE_PLATFORM_YOUTUBE"
+        app:sv_title="@string/TO"
         app:sv_v_divider="true" />
 </LinearLayout>
