功能:热点设置，使用语言包

--- a/app/src/main/res/layout/activity_ap_setting.xml
+++ b/app/src/main/res/layout/activity_ap_setting.xml
@@ -23,18 +23,21 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/y107"
         android:gravity="center_horizontal"
-        android:text="热点"
+        android:text="@string/SETTINGS_MOBILE_HOTSPOT"
         android:textColor="@color/color_333333"
         android:textSize="@dimen/sp26"
         app:layout_constraintTop_toBottomOf="parent" />
 
     <EditText
         android:id="@+id/et_ap_name"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/x20"
+        android:layout_marginStart="@dimen/x20"
         android:layout_marginTop="@dimen/y68"
         android:background="#00000000"
-        android:hint="输入"
+        android:gravity="center"
+        android:hint="@string/HOTSPOT_NEME_HINT"
         android:singleLine="true"
         android:textColorHint="@color/color_666666"
         android:textSize="@dimen/sp15"
@@ -120,8 +123,10 @@
         android:id="@+id/tv_hint"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/x20"
+        android:layout_marginStart="@dimen/x20"
         android:layout_marginTop="@dimen/y15"
-        android:text="请连接"
+        android:text="@string/TURN_ON_HOTSPOT_GUIDE"
         android:textColor="@color/color_4b9fd5"
         android:textSize="@dimen/sp13"
         app:layout_constraintEnd_toEndOf="parent"
@@ -137,7 +142,7 @@
         android:layout_marginTop="@dimen/y38"
         android:gravity="center"
         android:maxLines="1"
-        android:text="确定"
+        android:text="@string/OK"
         android:textColor="@color/common_btn_color_state"
         android:textSize="@dimen/sp17"
         app:layout_constraintEnd_toEndOf="parent"
